# Compiler

./: .gitignore
Compiler/: CMakeLists.txt  Compiler.sln
Compiler/Compiler/: Compiler.vcxproj  Compiler.vcxproj.filters  Grammar.cpp  Grammar.h  Source.cpp  arguments.cpp  arguments.h  asm_source.cpp  automate.cpp  automate.h  code  functions.cpp  functions.h  grammar.cpp  grammar.h  grammar_defines.h  rules.cpp  rules.h  translator.cpp  translator.h
Editor/: Editor.sln
Editor/Editor/: Compiler.cs  Editor.csproj  Form1.Designer.cs  Form1.cs  HightligthingText.cs
Editor/Editor/Properties/: AssemblyInfo.cs
compiled_programs/: compile.bat
compiled_programs/Editor/: .config  Source.blng
